--- a/index.html
+++ b/index.html
@@ -1,1 +1,4 @@
-<script>window.location.replace("https://superredeyeball.vercel.app/#moveddomain");</script>
+<script>
+    // Redirect to new domain with #moveddomain hash
+    window.location.replace("https://superredeyeball.vercel.app/#moveddomain");
+</script>
