--- a/404.html
+++ b/404.html
@@ -1,4 +1,4 @@
 <script>
     // Redirect to new domain with #moveddomain hash
-    window.location.replace("https://superredeyeball.vercel.app/#moveddomain");
+    window.location.replace("https://superredeyeball.netlify.app/#moveddomain");
 </script>
